crates/sith_python_parser/tests/snapshots/invalid_syntax@function_def_empty_body.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/function_def_empty_body.py
---
## AST

```
Module(
    ModModule {
        range: 0..36,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..14,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..9,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 11..30,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 15..18,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 18..20,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: Some(
                        Name(
                            NameExpr {
                                range: 24..27,
                                id: Name("int"),
                                ctx: Load,
                            },
                        ),
                    ),
                    body: [],
                },
            ),
            Assign(
                AssignStmt {
                    range: 29..35,
                    targets: [
                        Name(
                            NameExpr {
                                range: 29..30,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 33..35,
                            value: Int(
                                42,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo():
2 | def foo() -> int:
  | ^^^ Syntax Error: Expected an indented block after function definition
3 | x = 42
  |


  |
1 | def foo():
2 | def foo() -> int:
3 | x = 42
  | ^ Syntax Error: Expected an indented block after function definition
  |
