crates/sith_python_parser/tests/snapshots/invalid_syntax@function_def_invalid_return_expr.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/function_def_invalid_return_expr.py
---
## AST

```
Module(
    ModModule {
        range: 0..74,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..23,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..9,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: Some(
                        Starred(
                            StarredExpr {
                                range: 13..17,
                                value: Name(
                                    NameExpr {
                                        range: 14..17,
                                        id: Name("int"),
                                        ctx: Load,
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                    ),
                    body: [
                        Expr(
                            ExprStmt {
                                range: 19..22,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 19..22,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 23..48,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 27..30,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 30..32,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: Some(
                        Starred(
                            StarredExpr {
                                range: 37..41,
                                value: Name(
                                    NameExpr {
                                        range: 38..41,
                                        id: Name("int"),
                                        ctx: Load,
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                    ),
                    body: [
                        Expr(
                            ExprStmt {
                                range: 44..47,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 44..47,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 48..74,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 52..55,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 55..57,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: Some(
                        Yield(
                            YieldExpr {
                                range: 61..68,
                                value: Some(
                                    Name(
                                        NameExpr {
                                            range: 67..68,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            },
                        ),
                    ),
                    body: [
                        Expr(
                            ExprStmt {
                                range: 70..73,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 70..73,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo() -> *int: ...
  |              ^^^^ Syntax Error: Starred expression cannot be used here
2 | def foo() -> (*int): ...
3 | def foo() -> yield x: ...
  |


  |
1 | def foo() -> *int: ...
2 | def foo() -> (*int): ...
  |               ^^^^ Syntax Error: Starred expression cannot be used here
3 | def foo() -> yield x: ...
  |


  |
1 | def foo() -> *int: ...
2 | def foo() -> (*int): ...
3 | def foo() -> yield x: ...
  |              ^^^^^^^ Syntax Error: Yield expression cannot be used here
  |
